<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_beranda"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />


        <item
            android:id="@+id/nav_more"
            android:icon="@drawable/ic_baseline_apps_24"
            android:title="@string/menu_more" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_update"
                android:icon="@drawable/ic_baseline_update_24"
                android:title="@string/menu_update" />

            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_star_half_black_24dp"
                android:title="@string/menu_rate" />

        </menu>
    </item>

</menu>
